# wiktionary-scraper

./: Makefile  README.md  pyproject.toml
notebooks/: scrape_testing.ipynb
wiktionary_scraper/: scrape.py
